fix: discord margin overflow

--- a/src/theme/NavbarItem/Discord/styles.module.css
+++ b/src/theme/NavbarItem/Discord/styles.module.css
@@ -18,4 +18,5 @@
 
 .discordLogo figure {
     display: flex;
+    margin: 0;
 }
